-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.9.0-beta1
-
QC 4.9 beta snapshot 2833, macOS 10.13
-
-
31e549a7dce3b7f3c6dedc0f014162784e6cff08 (qt-creator/qt-creator/4.9)
Steps to reproduce:
- open tests\manual\debugger\simple project
- place a bp into the ctor of the plugin (or inside the pluginTest() function
- build & debug
- when stopping at the bp - check the breakpoint's tooltip (and its icon)
- information regarding the bps is completely present (except for the address - but this seems to be parsing issue as I can fetch these using the debug log)
| For Gerrit Dashboard: QTCREATORBUG-21997 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 254914,3 | Debugger: Improve lldb breakpoint handling | 4.9 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |