src/plugins/debugger/lldb/lldbengine.h
@@ -120,6 +120,7 @@ private:
     void handleStateNotification(const GdbMi &item);
     void handleLocationNotification(const GdbMi &location);
     void handleOutputNotification(const GdbMi &output);
+    void handleInterpreterBreakpointModified(const GdbMi &item);
 
     void handleResponse(const QString &data);
     void updateAll() override;
